<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_dish"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dish" />

    <item
        android:id="@+id/navigation_place_recipe"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_place" />

</menu>
